Added load more games and collapse button for recent games section

--- a/Final Website/index.html
+++ b/Final Website/index.html
@@ -88,11 +88,30 @@
       <div id="games-container" class="games-grid">
         <p class="loading-text">Loading recent games…</p>
       </div>
-      <p class="hint-text">
-        Tip: Click a game card to expand details. Click the ★ Favorite button to save it to
-        your Fan Zone.
-      </p>
-    </section>
+
+        <button
+          id="load-more-games"
+          class="btn secondary load-more-btn"
+          type="button"
+        >
+          Load more games
+        </button>
+
+        <!-- NEW: Collapse games button -->
+        <button
+          id="collapse-games"
+          class="btn secondary collapse-btn"
+          type="button"
+        >
+          Collapse games
+        </button>
+
+        <p class="hint-text">
+          Tip: Click a game card to expand details. Click the ★ Favorite button to save it to
+          your Fan Zone.
+        </p>
+      </section>
+
 
     <!-- TEAM HISTORY & LEGENDS -->
     <section id="history" class="panel">
